// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartPie UnitTest renders correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={136}
      bbWidth={236}
      focusable={false}
      height={136}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "marginBottom": 32,
            "marginLeft": 32,
            "marginRight": 32,
            "marginTop": 32,
          },
          {
            "flex": 0,
            "height": 136,
            "width": 236,
          },
        ]
      }
      width={236}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              0,
              56.66666666666667,
            ]
          }
        >
          <RNSVGPath
            d="M95.04417546714014,69.93285858429842A118,118,0,0,1,-66.46122450898385,97.50336218185734L-43.719639062836016,65.39906424911436A78.66666666666667,78.66666666666667,0,0,0,62.939877534397134,47.191273138150606Z"
            fill={
              {
                "payload": 4282076362,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M2.127195480599238,-117.98082488009362A118,118,0,0,1,97.50336218185734,66.46122450898383L65.39906424911436,43.71963906283603A78.66666666666667,78.66666666666667,0,0,0,2.127195480599235,-78.63790106451064Z"
            fill={
              {
                "payload": 4288436735,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M-69.9328585842984,95.04417546714014A118,118,0,0,1,-113.06834905314716,-33.757198378948424L-75.5787331436753,-21.824287865622612A78.66666666666667,78.66666666666667,0,0,0,-47.19127313815062,62.939877534397134Z"
            fill={
              {
                "payload": 4278238420,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M-111.77797046139199,-37.81117982200742A118,118,0,0,1,-2.1271954805991737,-117.98082488009362L-2.1271954805991746,-78.63790106451064A78.66666666666667,78.66666666666667,0,0,0,-74.28835455192012,-25.878269308681656Z"
            fill={
              {
                "payload": 4294947584,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4278195256,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                16.547059123670685,
                96.93110583709542,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="25%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4278195256,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                87.34621168065009,
                -45.167286275395305,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="35%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4291875024,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                -93.24329353062386,
                31.227114115882795,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="20%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4278195256,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                -58.037282702664825,
                -79.37958340112027,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="20%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
        </RNSVGGroup>
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              138,
              22.666666666666668,
            ]
          }
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4282076362,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="Deep"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                44,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4288436735,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="Light"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                88,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4278238420,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="REM"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                132,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4294947584,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="Awake"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ChartPie UnitTest renders with a single category 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={136}
      bbWidth={236}
      focusable={false}
      height={136}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "marginBottom": 32,
            "marginLeft": 32,
            "marginRight": 32,
            "marginTop": 32,
          },
          {
            "flex": 0,
            "height": 136,
            "width": 236,
          },
        ]
      }
      width={236}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              0,
              56.66666666666667,
            ]
          }
        >
          <RNSVGPath
            d="M7.225416114969383e-15,-118A118,118,0,1,1,-7.225416114969383e-15,118A118,118,0,1,1,7.225416114969383e-15,-118M-1.4450832229938766e-14,-78.66666666666667A78.66666666666667,78.66666666666667,0,1,0,1.4450832229938766e-14,78.66666666666667A78.66666666666667,78.66666666666667,0,1,0,-1.4450832229938766e-14,-78.66666666666667Z"
            fill={
              {
                "payload": 4282076362,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4278195256,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                6.02118009580782e-15,
                98.33333333333334,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="100%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
        </RNSVGGroup>
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              138,
              22.666666666666668,
            ]
          }
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4282076362,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="Deep"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ChartPie UnitTest renders with custom inner and outer radius 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={136}
      bbWidth={236}
      focusable={false}
      height={136}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "marginBottom": 32,
            "marginLeft": 32,
            "marginRight": 32,
            "marginTop": 32,
          },
          {
            "flex": 0,
            "height": 136,
            "width": 236,
          },
        ]
      }
      width={236}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              38,
              56.66666666666667,
            ]
          }
        >
          <RNSVGPath
            d="M64.45280207055015,47.39025538287894A80,80,0,0,1,-45.08086944480624,66.08869199870983L-27.73547849671208,41.60220225611165A50,50,0,0,0,39.96631232795196,30.044864434784778Z"
            fill={
              {
                "payload": 4282076362,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M1.4150441042616193,-79.98748433463197A80,80,0,0,1,66.08869199870983,45.08086944480625L41.60220225611165,27.735478496712084A50,50,0,0,0,1.4150441042616193,-49.9799724908187Z"
            fill={
              {
                "payload": 4288436735,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M-47.39025538287894,64.45280207055015A80,80,0,0,1,-76.64874308971406,-22.9122278001728L-48.054780457533994,-13.810795602651172A50,50,0,0,0,-30.044864434784778,39.96631232795196Z"
            fill={
              {
                "payload": 4278238420,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M-75.7903628255673,-25.60900042502376A80,80,0,0,1,-1.4150441042615582,-79.98748433463197L-1.4150441042615587,-49.97997249081871A50,50,0,0,0,-47.19640019338723,-16.507568227502137Z"
            fill={
              {
                "payload": 4294947584,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4278195256,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                10.937886539375537,
                64.073103858419,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="25%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4278195256,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                57.73732636517547,
                -29.8563417752613,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="35%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4291875024,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                -61.63539741854797,
                20.641651703719134,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="20%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4278195256,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                -38.36362754921912,
                -52.47125004480831,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="20%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
        </RNSVGGroup>
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              138,
              22.666666666666668,
            ]
          }
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4282076362,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="Deep"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                44,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4288436735,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="Light"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                88,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4278238420,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="REM"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                132,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4294947584,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="Awake"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ChartPie UnitTest renders with legend on the left 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={136}
      bbWidth={236}
      focusable={false}
      height={136}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "marginBottom": 32,
            "marginLeft": 32,
            "marginRight": 32,
            "marginTop": 32,
          },
          {
            "flex": 0,
            "height": 136,
            "width": 236,
          },
        ]
      }
      width={236}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              236,
              56.66666666666667,
            ]
          }
        >
          <RNSVGPath
            d="M95.04417546714014,69.93285858429842A118,118,0,0,1,-66.46122450898385,97.50336218185734L-43.719639062836016,65.39906424911436A78.66666666666667,78.66666666666667,0,0,0,62.939877534397134,47.191273138150606Z"
            fill={
              {
                "payload": 4282076362,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M2.127195480599238,-117.98082488009362A118,118,0,0,1,97.50336218185734,66.46122450898383L65.39906424911436,43.71963906283603A78.66666666666667,78.66666666666667,0,0,0,2.127195480599235,-78.63790106451064Z"
            fill={
              {
                "payload": 4288436735,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M-69.9328585842984,95.04417546714014A118,118,0,0,1,-113.06834905314716,-33.757198378948424L-75.5787331436753,-21.824287865622612A78.66666666666667,78.66666666666667,0,0,0,-47.19127313815062,62.939877534397134Z"
            fill={
              {
                "payload": 4278238420,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M-111.77797046139199,-37.81117982200742A118,118,0,0,1,-2.1271954805991737,-117.98082488009362L-2.1271954805991746,-78.63790106451064A78.66666666666667,78.66666666666667,0,0,0,-74.28835455192012,-25.878269308681656Z"
            fill={
              {
                "payload": 4294947584,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4278195256,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                16.547059123670685,
                96.93110583709542,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="25%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4278195256,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                87.34621168065009,
                -45.167286275395305,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="35%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4291875024,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                -93.24329353062386,
                31.227114115882795,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="20%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
          <RNSVGText
            content={null}
            dx={[]}
            dy={
              [
                ".4em",
              ]
            }
            fill={
              {
                "payload": 4278195256,
                "type": 0,
              }
            }
            font={
              {
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                -58.037282702664825,
                -79.37958340112027,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
            rotate={[]}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="20%"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
        </RNSVGGroup>
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              0,
              22.666666666666668,
            ]
          }
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4282076362,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="Deep"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                44,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4288436735,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="Light"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                88,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4278238420,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="REM"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                132,
              ]
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 0,
                  "type": 0,
                }
              }
              height={32}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                ]
              }
              rx={32}
              ry={32}
              stroke={
                {
                  "payload": 4294947584,
                  "type": 0,
                }
              }
              strokeWidth={2}
              width={32}
              x={0}
              y={0}
            />
            <RNSVGText
              content={null}
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4287798703,
                  "type": 0,
                }
              }
              font={
                {
                  "fontSize": 15,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
              rotate={[]}
              x={
                [
                  44,
                ]
              }
              y={
                [
                  22,
                ]
              }
            >
              <RNSVGTSpan
                content="Awake"
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                font={{}}
                rotate={[]}
                x={[]}
                y={[]}
              />
            </RNSVGText>
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;
